--- a/12.4/格式化字符串.md
+++ b/12.4/格式化字符串.md
@@ -1,4 +1,130 @@
 #  **字符串格式化语法参考**
 
-首先是对齐（**[align]**）选项，对齐一共有 4 个值可供使用：
+### 1. str.format()
+
+```python
+a.使用 {} 占位符：
+'我喜欢吃{}'.format('苹果')	#输出: '我喜欢吃苹果'
+b.位置索引
+'{1}喜欢吃{0}'.format('鱼', '我')	#输出：'我喜欢吃鱼'
+c.关键字索引
+('{name}喜欢{thing}').format(name = '姬小满',thing = '摸鱼')	#输出：'姬小满喜欢摸鱼'
+d.可以混合使用
+```
+
+## 对齐（align）
+
+首先是**对齐**（**[align]**）选项，对齐一共有 4 个值可供使用：
+
+|  值   |                             含义                             |
+| :---: | :----------------------------------------------------------: |
+| ' < ' |            强制字符串在可用空间内 左对齐 （默认）            |
+| ' > ' |                强制字符串在可用空间内 右对齐                 |
+| ' = ' | 强制将填充放置在符号(如果有)之后但在数字之前的位置(这适用于以 " +000 000 120" 的形式打印字符串) |
+| ' ^ ' |                  强制字符串在可用空间内居中                  |
+
+```python
+'{:^}'.format(520)		#输出：’520'
+'{:^10}'.format(520)		#输出：'   520    '
+'{1:>10}{0:<10}'.format(520,250)		#输出：'       250520       '
+'{left:>10}{right:<10}'.format(right = 520, left = 250)	#输出：'       250520       '
+"{:010}".format(520)	#输出：'0000000520'
+"{:010}".format(-520)	#输出：'-000000520'
+"{1:%>10}{0:%<10}".format(520,250)	#输出：'%%%%%%%250520%%%%%%%'
+'{:0=10}'.format(-520)	#输出：'-000000520'
+```
+
+## 符号选项
+
+|  值   |                       含义                       |
+| :---: | :----------------------------------------------: |
+| ' + ' | 正数在前面添加正号（+），负数在前面添加负号（-） |
+| ' - ' |      只有负数在前面添加符号（-），默认行为       |
+| 空格  | 正数在前面添加一个空格，负数在前面添加负号（-）  |
+
+```python
+'{:+}{:-}'.format(520,-250)		#输出：'+520-250'
+#千位的分隔符（位数不足则不显示）
+'{:,}'.format(1234)		#输出：'1,234'
+"{:_}".format(1234)		#输出：'1_234'
+```
+
+## 精度选项	(适用于浮点数)
+
+```python
+#总共输出几位字符
+"{:.2}".format(3.1415926)		#输出：'3.1'
+#可以应用到字符串（整数不行）
+"{:.7}".format('I love FishC!')		#输出：'I love '
+#输出几位小数
+"{:.3f}".format(3.1415926)		#输出：'3.142'
+#输出几位数字
+"{:.5g}".format(3.1415926)		#输出：'3.1416'
+```
+
+## type类型选项
+
+**1.适用于整数**
+
+|  值   |                             含义                             |
+| :---: | :----------------------------------------------------------: |
+| ' b ' |                   将参数以二进制的形式输出                   |
+| ' c ' |                将参数以Unicode字符的形式输出                 |
+| ' d ' |                   将参数以十进制的形式输出                   |
+| ' o ' |                   将参数以8进制的形式输出                    |
+| ' x ' |                  将参数以十六进制的形式输出                  |
+| ' X ' |                  将参数以十六进制的形式输出                  |
+| ' n ' | 跟' d '类似，不同之处在于他会使用当前语言环境设置的分隔符插入到恰当的位置 |
+| None  |                         跟' d '一样                          |
+|   #   |       参数以二进制、八进制、十六进制输出，追加一个前缀       |
+
+```python
+"{:b}".format(8)		#输出：'1000'
+"{:c}".format(63)		#输出：'?'
+"{:d}".format(0xa)		#输出：'10'
+"{:o}".format(80)		#输出：'120'
+"{:#b}".format(80)		#输出：'0b1010000'
+'{:#o}'.format(80)		#输出：'0o120'
+```
+
+**2.适用于浮点数和复数**
+
+|  值   |                             含义                             |
+| :---: | :----------------------------------------------------------: |
+| ' e ' | 将参数以科学计数法的形式输出（以字母' e '来标示指数，默认精度为6） |
+| ' E ' | 将参数以科学计数法的形式输出（以字母' E '来标示指数，默认精度为6） |
+| ' f ' | 将参数以定点表示法的形式输出（”不是数“用'nan'标示，无穷用'inf'标示，默认精度为6） |
+| ' F ' | 将参数以定点表示法的形式输出（”不是数“用'NAN'标示，无穷用'INF'标示，默认精度为6） |
+| ' g ' |     通用格式，小数以' f '形式输出，大数以' e '的形式输出     |
+| ' G ' |     通用格式，小数以' F '形式输出，大数以' E '的形式输出     |
+| ' n ' | 跟' g '类似，不同之处在于他会使用当前语言环境设置的分隔符插入到恰当的位置 |
+| ' % ' | 以百分比的形式输出（将数字乘以100并显示为定点表示法（' f '）的形式，后面附带一个百分号） |
+| None  | 类似于' g '，不同之处在于当使用定点表示法时，小数点后将至少显示一位；默认精度与给定值所需的精度一致 |
+
+```python
+"{:e}".format(3.1415926)		#输出：'3.141593e+00'
+"{:E}".format(3.1415926)		#输出：'3.141593E+00'
+"{:f}".format(3.1415926)		#输出：'3.141593'
+"{:F}".format(3.1415926)		#输出：'3.141593'
+"{:g}".format(3.1415926)		#输出：'3.14159'
+"{:G}".format(3.1415926)		#输出：'3.14159'
+"{:n}".format(3.1415926)		#输出：'3.14159'
+"{:%}".format(0.77)				#输出：'77.000000%'
+#关键字设置可选参数的值
+"{:.{prec}%}".format(0.77,prec = 2)	#输出：'77.00%'
+```
+
+### f-字符串	(适用于Python3.6版本之后)
+
+```python
+f"{123456789:,}"		#输出：'123,456,789'
+F"{3.1415926:.2f}"		#输出：'3.14'
+f"{-520:010}"			#输出：'-000000520'
+fill = '+'
+align = '^'
+width = 10
+prec = 3
+ty = 'g'
+F"{3.1415926:{fill}{align}{width}.{prec}{ty}}"	#输出：'+++3.14+++'
+```
 
